--- a/index.html
+++ b/index.html
@@ -32,21 +32,20 @@
         <div class="section responsive" id="section2">
             <div class="pure-g">
                 <div class="pure-u-7-8  pure-u-sm-1-3 pure-u-md-1-4 offset-sm-1-8 offset-md-1-6">
-                    <img class="presentation-icon pure-img center small no-margin res-left" src="/assets/images/avatars/1-y.png">
-                    <h1 class='presentation-name'></h1>
-                    <p class='presentation-description'></p>
+                    <img class="pure-img center small no-margin res-left" src="/assets/images/avatars/1-y.png">
+                    <h1 class='presentation-name-a'></h1>
+                    <p class='presentation-description-a'></p>
                 </div>
                 <div class="pure-u-7-8 pure-u-sm-1-3 pure-u-md-1-4 offset-sm-1-12  offset-md-1-6 right-offset">
                     <img class="pure-img center small no-margin res-right" src="/assets/images/avatars/2-y.png">
-                    <h1 class='presentation-name'></h1>
-                    <p class='presentation-description'></p>
+                    <h1 class='presentation-name-b'></h1>
+                    <p class='presentation-description-b'></p>
                 </div>
             </div>
             <div class="pure-g">
                 <div class="pure-u-1-1">
                     <div id='roll-the-dice-button'>
-                        <img src='assets/images/dice.png' />
-                        <p>Roll the dice!</p>
+                        <img class="pure-img" src='assets/images/dice.png' />
                     </div>
                 </div>
             </div>
@@ -187,19 +186,40 @@
         <!-- Report -->
         <div class="section responsive" id="section4">
             <div class="pure-g">
-                <div class="pure-u-7-8 pure-u-sm-1-3 pure-u-md-1-4 offset-sm-1-8 offset-md-1-6">
-                    <img class="pure-img center small no-margin res-left" src="/assets/images/avatars/1-y.png">
-                    <h1>Sal</h1>
-                    <p>Thinks dinosaurs are probably still around.</p>
+                <div class="pure-u-7-8  pure-u-sm-1-3 pure-u-md-1-4 offset-sm-1-8 offset-md-1-6">
+                    <div class="pure-u-1-1 report-card">
+                        <img class="pure-img center mini" src="/assets/images/avatars/1-y.png">
+                        <h1 class='presentation-name-a'></h1>
+                        <p class='presentation-description-a'></p>
+                    </div>
+                    <div class="pure-u-1-1">
+                        <ul>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                        </ul>
+                    </div>
                 </div>
-                <div class="pure-u-5-6 pure-u-sm-1-3 pure-u-md-1-4 offset-sm-1-12 offset-md-1-6 right-offset">
-                    <img class="pure-img center small no-margin res-right" src="/assets/images/2-y.png">
-                    <h1>Alex</h1>
-                    <p>Loves giraffes.</p>
+                <div class="pure-u-7-8 pure-u-sm-1-3 pure-u-md-1-4 offset-sm-1-12  offset-md-1-6 right-offset">
+                    <div class="pure-u-1-1 report-card">
+                        <img class="pure-img center mini" src="/assets/images/avatars/2-y.png">
+                        <h1 class='presentation-name-b'></h1>
+                        <p class='presentation-description-b'></p>
+                    </div>
+                    <div class="pure-u-1-1">
+                        <ul>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
 </body>
 
 </html>
