--- a/index.html
+++ b/index.html
@@ -56,158 +56,68 @@
                 <div class="pure-u-7-8  pure-u-sm-1-3 pure-u-md-1-4 offset-sm-1-8 offset-md-1-6">
                     <div id="log-a">
                         <div class="log">
-                            <h2>0-14 years</h2>
+                            <h2>5 years old</h2>
                         </div>
                         <div class="log">
                             <img class='pure-img event-icon' src="./assets/images/fun/f-goldfish.png" alt="">
-                            <p>Lorem ipsum dolor.</p>
-                        </div>
-                        <div>
-                            <img class='pure-img event-icon' src="./assets/images/fun/f-goldfish.png" alt="">
-                            <p>Velit, similique, natus!</p>
-                        </div>
-                        <div>
-                            <img class='pure-img event-icon' src="./assets/images/fun/f-goldfish.png" alt="">
-                            <p>Iste error, dolore?</p>
+                            <p>Gold Fish Dies :(</p>
                         </div>
                         <div class="log">
-                            <h2>15-29 years</h2>
+                            <h2>20 years old</h2>
                         </div>
                         <div>
-                            <img class='pure-img event-icon' src="./assets/images/fun/f-goldfish.png" alt="">
-                            <p class="class-age1">Ad, facere voluptas?</p>
-                        </div>
-                        <div>
-                            <img class='pure-img event-icon' src="./assets/images/fun/f-goldfish.png" alt="">
-                            <p>Amet, repellendus, blanditiis!</p>
-                        </div>
-                        <div>
-                            <img class='pure-img event-icon' src="./assets/images/fun/f-goldfish.png" alt="">
-                            <p>Consectetur, officiis, quas.</p>
+                            <img class='pure-img event-icon' src="./assets/images/fun/f-pimple.png" alt="">
+                           <!--  <p class="class-age1">Got a pimple</p> -->
+                           <p>Got a pimple</p>
                         </div>
                         <div class="log">
-                            <h2>30-44 years</h2>
+                            <h2>40 years old</h2>
                         </div>
                         <div>
-                            <img class='pure-img event-icon' src="./assets/images/fun/f-goldfish.png" alt="">
-                            <p>Minima, ea corporis?</p>
-                        </div>
-                        <div>
-                            <img class='pure-img event-icon' src="./assets/images/fun/f-goldfish.png" alt="">
-                            <p>Labore, facere, voluptatibus!</p>
-                        </div>
-                        <div>
-                            <img class='pure-img event-icon' src="./assets/images/fun/f-goldfish.png" alt="">
-                            <p>Consequatur, accusantium, qui.</p>
+                            <img class='pure-img event-icon' src="./assets/images/fun/f-flooded.png" alt="">
+                            <p>Washing Machine Floods</p>
                         </div>
                         <div class="log">
-                            <h2>45-65 years</h2>
+                            <h2>70 years old</h2>
                         </div>
                         <div>
-                            <img class='pure-img event-icon' src="./assets/images/fun/f-goldfish.png" alt="">
-                            <p class="class-house1">Quidem animi, iure.</p>
-                        </div>
-                        <div>
-                            <img class='pure-img event-icon' src="./assets/images/fun/f-goldfish.png" alt="">
-                            <p>Cumque sit, nisi!</p>
-                        </div>
-                        <div>
-                            <img class='pure-img event-icon' src="./assets/images/fun/f-goldfish.png" alt="">
-                            <p>Aspernatur facere, laborum!</p>
-                        </div>
-                        <div class="log">
-                            <h2>65+ years</h2>
-                        </div>
-                        <div>
-                            <img class='pure-img event-icon' src="./assets/images/fun/f-goldfish.png" alt="">
-                            <p>Quis, quae quisquam.</p>
-                        </div>
-                        <div>
-                            <img class='pure-img event-icon' src="./assets/images/fun/f-goldfish.png" alt="">
-                            <p>Eligendi, labore porro.</p>
-                        </div>
-                        <div>
-                            <img class='pure-img event-icon' src="./assets/images/fun/f-goldfish.png" alt="">
-                            <p>Explicabo, molestiae, libero!</p>
+                            <img class='pure-img event-icon' src="./assets/images/events/e-no-internet.png" alt="">
+                            <!-- <p class="class-house1">No Internet</p> -->
+                            <p>No Internet</p>
                         </div>
                     </div>
                 </div>
                 <div class="pure-u-7-8 pure-u-sm-1-3 pure-u-md-1-4 offset-sm-1-12 offset-md-1-6 right-offset">
                     <div id="log-b">
                         <div class="log">
-                            <h2>0-14 years</h2>
-                        </div>
-                        <div>
-                            <img class='pure-img event-icon' src="./assets/images/fun/f-goldfish.png" alt="">
-                            <p>Lorem ipsum dolor.</p>
-                        </div>
-                        <div>
-                            <img class='pure-img event-icon' src="./assets/images/fun/f-goldfish.png" alt="">
-                            <p>Velit, similique, natus!</p>
-                        </div>
-                        <div>
-                            <img class='pure-img event-icon' src="./assets/images/fun/f-goldfish.png" alt="">
-                            <p>Iste error, dolore?</p>
+                            <h2>5 years old</h2>
                         </div>
                         <div class="log">
-                            <h2>15-29 years</h2>
-                        </div>
-                        <div>
-                            <img class='pure-img event-icon' src="./assets/images/fun/f-goldfish.png" alt="">
-                            <p class="class-age2">Ad, facere voluptas?</p>
-                        </div>
-                        <div>
-                            <img class='pure-img event-icon' src="./assets/images/fun/f-goldfish.png" alt="">
-                            <p>Amet, repellendus, blanditiis!</p>
-                        </div>
-                        <div>
-                            <img class='pure-img event-icon' src="./assets/images/fun/f-goldfish.png" alt="">
-                            <p>Consectetur, officiis, quas.</p>
+                            <img class='pure-img event-icon' src="./assets/images/events/e-unemployed.png" alt="">
+                            <p>Lives in a house where no one has a job</p>
                         </div>
                         <div class="log">
-                            <h2>30-44 years</h2>
+                            <h2>20 years old</h2>
                         </div>
                         <div>
-                            <img class='pure-img event-icon' src="./assets/images/fun/f-goldfish.png" alt="">
-                            <p>Minima, ea corporis?</p>
-                        </div>
-                        <div>
-                            <img class='pure-img event-icon' src="./assets/images/fun/f-goldfish.png" alt="">
-                            <p>Labore, facere, voluptatibus!</p>
-                        </div>
-                        <div>
-                            <img class='pure-img event-icon' src="./assets/images/fun/f-goldfish.png" alt="">
-                            <p>Consequatur, accusantium, qui.</p>
+                            <img class='pure-img event-icon' src="./assets/images/events/e-finishes-school.png" alt="">
+                            <!-- <p class="class-age1">Leaves high-school doesnt go to University</p> -->
+                            <p >Leaves high-school doesnt go to University</p>
                         </div>
                         <div class="log">
-                            <h2>45-65 years</h2>
+                            <h2>40 years old</h2>
                         </div>
                         <div>
-                            <img class='pure-img event-icon' src="./assets/images/fun/f-goldfish.png" alt="">
-                            <p class="class-house2">Quidem animi, iure.</p>
-                        </div>
-                        <div>
-                            <img class='pure-img event-icon' src="./assets/images/fun/f-goldfish.png" alt="">
-                            <p>Cumque sit, nisi!</p>
-                        </div>
-                        <div>
-                            <img class='pure-img event-icon' src="./assets/images/fun/f-goldfish.png" alt="">
-                            <p>Aspernatur facere, laborum!</p>
+                            <img class='pure-img event-icon' src="./assets/images/fun/f-dumped.png" alt="">
+                            <p>Gets dumped</p>
                         </div>
                         <div class="log">
-                            <h2>65+ years</h2>
+                            <h2>70 years old</h2>
                         </div>
                         <div>
-                            <img class='pure-img event-icon' src="./assets/images/fun/f-goldfish.png" alt="">
-                            <p>Quis, quae quisquam.</p>
-                        </div>
-                        <div>
-                            <img class='pure-img event-icon' src="./assets/images/fun/f-goldfish.png" alt="">
-                            <p>Eligendi, labore porro.</p>
-                        </div>
-                        <div>
-                            <img class='pure-img event-icon' src="./assets/images/fun/f-goldfish.png" alt="">
-                            <p>Explicabo, molestiae, libero!</p>
+                            <img class='pure-img event-icon' src="./assets/images/events/e-renting.png" alt="">
+                            <!-- <p class="class-house1">Still renting</p> -->
+                            <p>Still renting</p>
                         </div>
                     </div>
                 </div>
@@ -218,13 +128,16 @@
             <div class="pure-g">
                 <div class="pure-u-7-8  pure-u-sm-1-3 pure-u-md-1-4 offset-sm-1-8 offset-md-1-6">
                     <div class="pure-u-1-1 report-card">
-                        <img class="pure-img center mini-image" src="/assets/images/avatars/1-y.png">
+                        <img class="pure-img center mini-image" src="/assets/images/avatars/1-h.png">
                         <h1 class='presentation-name-a'></h1>
                         <p class='presentation-description-a'></p>
                     </div>
                     <div class="pure-u-1-1">
                         <ul>
-                            <li class="class-age1"></li>
+                            <li class="class-age1">
+                            	<h2>5 years old</h2>
+                            	<p>Lives in a house where no one has a job</p>
+                            </li>
                             <li class="class-house1"></li>
                             <li class="class-age3"></li>
                             <li class="class-age4"></li>
@@ -234,7 +147,7 @@
                 </div>
                 <div class="pure-u-7-8 pure-u-sm-1-3 pure-u-md-1-4 offset-sm-1-12  offset-md-1-6 right-offset">
                     <div class="pure-u-1-1 report-card">
-                        <img class="pure-img center mini-image" src="/assets/images/avatars/2-y.png">
+                        <img class="pure-img center mini-image" src="/assets/images/avatars/2-s.png">
                         <h1 class='presentation-name-b'></h1>
                         <p class='presentation-description-b'></p>
                     </div>
